--- a/TrackingCetol/app/build.gradle
+++ b/TrackingCetol/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.0.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
     implementation 'com.android.support:gridlayout-v7:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
 }
