--- a/TrackingCetol/app/src/main/AndroidManifest.xml
+++ b/TrackingCetol/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SplashActivity" android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".FeedbackActivity"></activity>
+        <activity
+            android:name=".SplashActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,12 +24,10 @@
         <activity android:name=".DetailPesananActivity" />
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
-
-        </activity>
+            android:label="@string/app_name"></activity>
         <activity
             android:name=".custompopup"
-            android:theme="@style/AppTheme.customtheme"></activity>
+            android:theme="@style/AppTheme.customtheme" />
     </application>
 
 </manifest>
